--- a/EvaluacionProveedores/src/Frontera/ContratarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/ContratarProveedor.form
@@ -201,6 +201,9 @@
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField7">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField7ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
