--- a/EvaluacionProveedores/src/Frontera/ContratarProveedor.form
+++ b/EvaluacionProveedores/src/Frontera/ContratarProveedor.form
@@ -259,7 +259,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Envios por mes:"/>
+            <Property name="text" type="java.lang.String" value="Pedido Total:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel3">
