--- a/EvaluacionProveedores/src/Frontera/GenerarReporte.form
+++ b/EvaluacionProveedores/src/Frontera/GenerarReporte.form
@@ -121,6 +121,7 @@
         <Component class="javax.swing.JTextArea" name="vistaReporte">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="rows" type="int" value="5"/>
           </Properties>
         </Component>
